--- a/.github/workflows/Build.yaml
+++ b/.github/workflows/Build.yaml
@@ -26,7 +26,7 @@ jobs:
       steps:
          - uses: actions/checkout@v3
          - id: fooa
-           uses: cdsap/ge-experiment-report@v.1.2
+           uses: cdsap/ge-experiment-report@v.1-test
            with:
              task: "assembleDebug"
              max-builds: 999
