--- a/.github/workflows/Build.yaml
+++ b/.github/workflows/Build.yaml
@@ -7,7 +7,7 @@ jobs:
     runners:
       strategy:
         matrix:
-          version: ["${{ github.head_ref }}","gg_kp_2"]
+          version: ["gg_kp","gg_kp_2"]
       runs-on: "ubuntu-latest"
       steps:
          - uses: actions/checkout@v3
@@ -31,7 +31,7 @@ jobs:
              task: "assembleDebug"
              max-builds: 999
              experiment-id: ${{github.run_number}}
-             tags: "${{ github.head_ref }}, gg_kp_2"
+             tags: "gg_kp, gg_kp_2"
              project: "nowinandroid"
              api-key: ${{ secrets.GE_API_KEY }}
              url: ${{ secrets.GE_URL }}
