--- a/.github/workflows/Build.yaml
+++ b/.github/workflows/Build.yaml
@@ -3,7 +3,7 @@ name: Build
 on:
   push:
     branches:
-      - main
+      - test_5
   pull_request:
 concurrency:
   group: build-${{ github.ref }}
@@ -22,7 +22,7 @@ jobs:
         uses: gradle/wrapper-validation-action@v1
 
       - name: Copy CI gradle.properties
-        run: mkdir -p ~/.gradle ; cp .github/ci-gradle.properties ~/.gradle/gradle.properties        
+        run: mkdir -p ~/.gradle ; cp .github/ci-gradle.properties ~/.gradle/gradle.properties
 
       - name: Set up JDK 11
         uses: actions/setup-java@v3
@@ -38,12 +38,18 @@ jobs:
 
       - name: Check lint
         run: ./gradlew lintDemoDebug
+        env:
+            GRADLE_ENTERPRISE_ACCESS_KEY: ${{ secrets.GRADLE_ENTERPRISE_ACCESS_KEY }}
 
       - name: Build all build type and flavor permutations
         run: ./gradlew assemble
+        env:
+            GRADLE_ENTERPRISE_ACCESS_KEY: ${{ secrets.GRADLE_ENTERPRISE_ACCESS_KEY }}
 
       - name: Run local tests
         run: ./gradlew testDemoDebug testProdDebug
+        env:
+            GRADLE_ENTERPRISE_ACCESS_KEY: ${{ secrets.GRADLE_ENTERPRISE_ACCESS_KEY }}
 
       - name: Upload build outputs (APKs)
         uses: actions/upload-artifact@v3
@@ -69,7 +75,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      
+
       - name: Copy CI gradle.properties
         run: mkdir -p ~/.gradle ; cp .github/ci-gradle.properties ~/.gradle/gradle.properties
 
