--- a/gradle.properties
+++ b/gradle.properties
@@ -8,13 +8,14 @@
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
 # Ensure important default jvmargs aren't overwritten. See https://github.com/gradle/gradle/issues/19750
-org.gradle.jvmargs=-Xmx6g -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8 -XX:+UseParallelGC -XX:MaxMetaspaceSize=1g
-org.gradle.caching.debug=true
+org.gradle.jvmargs=-Xmx6g  -XX:+UseParallelGC
+
+#org.gradle.caching.debug=true
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 org.gradle.parallel=true
-
+org.gradle.workers.max = 8
 # Not encouraged by Gradle and can produce weird results. Wait for isolated projects instead.
 org.gradle.configureondemand=false
 
