--- a/.github/workflows/Build.yaml
+++ b/.github/workflows/Build.yaml
@@ -35,7 +35,7 @@ jobs:
 
 
       - name: Build all build type and flavor permutations
-        run: ./gradlew assemble
+        run: ./gradlew assembleDebug
         env:
           GRADLE_ENTERPRISE_ACCESS_KEY: ${{ secrets.GRADLE_ENTERPRISE_ACCESS_KEY }}
 
