--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,7 +6,7 @@ androidxActivity = "1.7.0"
 androidxAppCompat = "1.5.1"
 androidxBrowser = "1.4.0"
 androidxComposeBom = "2023.01.00"
-androidxComposeCompiler = "1.4.1"
+androidxComposeCompiler = "1.4.0-alpha02"
 androidxComposeMaterial3 = "1.1.0-alpha06"
 androidxComposeRuntimeTracing = "1.0.0-alpha01"
 androidxCore = "1.9.0"
@@ -37,11 +37,11 @@ hilt = "2.44.2"
 hiltExt = "1.0.0"
 jacoco = "0.8.7"
 junit4 = "4.13.2"
-kotlin = "1.8.0"
+kotlin = "1.7.20"
 kotlinxCoroutines = "1.6.4"
 kotlinxDatetime = "0.4.0"
 kotlinxSerializationJson = "1.4.1"
-ksp = "1.8.0-1.0.9"
+ksp = "1.7.21-1.0.8"
 lint = "30.3.1"
 okhttp = "4.10.0"
 protobuf = "3.21.12"
